// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected in basic state 1`] = `
<div
  className="css-iz9zke"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with a light background when on the same row 1`] = `
<div
  className="css-9v78r0"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with background when selected 1`] = `
<div
  className="css-9v78r0"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;

exports[`renders with bold text when locked 1`] = `
<div
  className="css-14zxudu"
  onClick={[Function]}
>
  <p
    className="css-1h92lle"
  >
    1
  </p>
</div>
`;
